--- a/templates/Index/index.html
+++ b/templates/Index/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="d-flex justify-content-center flex-column">
-    <h1>Good Night My Love</h1>
+    <h1 class="text-light fs-1">Good Night My Love</h1>
     <div class="my-5 d-flex flex-column">
         <button class="btn btn-pink btn-lg my-3" id="play-latest-story">Play Latest Story</button>
         <button class="btn btn-pink btn-lg my-3" id="generate-new-story">Generate New Story</button>
